--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.2-SNAPSHOT'
+    id 'fabric-loom' version '1.6-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -21,11 +21,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
-    modApi ("me.shedaniel.cloth:cloth-config-fabric:11.1.106"){
+    modApi ("me.shedaniel.cloth:cloth-config-fabric:13.0.121"){
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    modApi "com.terraformersmc:modmenu:7.1.0"
+    modApi "com.terraformersmc:modmenu:9.2.0-beta.2"
 
 
     // To change the versions see the gradle.properties file
